--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
     "build": "yarn build:ios && yarn run build:android",
-        "build:ios": "react-native bundle --platform ios --dev false --entry-file index.ios.js --bundle-output build/ios/index.ios.bundle.js",
-        "build:android": "react-native bundle --platform android --dev false --entry-file index.android.js --bundle-output build/android/index.android.bundle.js --assets-dest build/assets/"
+    "build:ios": "react-native bundle --platform ios --dev false --entry-file index.ios.js --bundle-output build/ios/index.ios.bundle.js",
+    "build:android": "react-native bundle --platform android --dev false --entry-file index.android.js --bundle-output build/android/index.android.bundle.js --assets-dest build/assets/"
   },
   "dependencies": {
     "react": "16.8.3",
-    "react-native": "0.59.10"
+    "react-native": "0.59.10",
+    "react-native-zapp-bridge": "^2.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
