--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
 
-    -- name: Install
+    - name: Install
       uses: actions/npm@master
       with:
         args: install
