adding ios and android plugin manifests

--- a/plugin_manifest_ios.json
+++ b/plugin_manifest_ios.json
@@ -10,28 +10,25 @@
 
   ],
   "platform": "ios",
-  "author_name": "Liviu Romascanu",
-  "author_email": "l.romasca@applicaster.com",
-  "manifest_version": "0.1.0",
+  "manifest_version": "0.2.0",
+  "author_email": "u.lumnitz@applicaster.com",
+  "author_name": "Udi lumnitz",
   "name": "Zapp React Native Starter Plugin",
   "description": "React native starter plugin used as a starting codebase for new RN development",
   "type": "general",
   "screen": true,
   "identifier": "ZappRNStarter",
   "ui_builder_support": true,
-  "whitelisted_account_ids": [
-    "57d7bee06466610018000000"
-  ],
-  "min_zapp_sdk": "12.0.0",
+  "min_zapp_sdk": "12.2.0-Dev",
   "deprecated_since_zapp_sdk": "",
   "unsupported_since_zapp_sdk": "",
   "react_native": true,
-  "react_bundle_url": "https://assets-production.applicaster.com/applicaster-employees/us_team/ZappRNStarter/ios/index.ios.bundle.js",
+  "react_bundle_url": "",
   "extra_dependencies": [
 
   ],
   "npm_dependencies": [
-
+    "zapp-reactnative-starter@0.2.0"
   ],
   "project_dependencies": [
 
