testing adding ruby

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -19,3 +19,10 @@ jobs:
       uses: actions/npm@master
       with:
         args: test
+
+    - name: install ruby
+      uses: mscoutermarsh/ruby-action-recipe@master
+      run:
+        apt install linuxbrew-wrapper
+        brew tap applicaster/tap
+        brew install zappifest
