--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -23,6 +23,15 @@ jobs:
     - name: install ruby
       run:
         sudo apt install ruby-full
+
+    - name: install brew
+      run:
         sudo apt install linuxbrew-wrapper
+
+    - name: install applicaster/tap
+      run:
         brew tap applicaster/tap
+        
+    - name: install zappifest
+      run:
         brew install zappifest
