--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,25 +12,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@master
-
-    - name: Install
-      uses: actions/npm@master
+ 
+    - uses: actions/setup-node@v1
       with:
-        args: install
-    
-    - name: Test
-      uses: actions/npm@master
-      with:
-        args: test
-    
-    - name: Build Bundle
-      uses: actions/npm@master
-      with:
-        args: build
-
-    - name: Publish to NPM
-      uses: actions/npm@master
+        node-version: '8.x'
+        registry-url: 'https://registry.npmjs.org'
+    - run: npm install
+    - run: npm test
+    - run: npm build
+    - run: npm publish
       env:
-        NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-      with:
-        args: publish --access public
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+    
